--- a/_sass/addon/module.scss
+++ b/_sass/addon/module.scss
@@ -7,7 +7,7 @@
 %heading {
   color: var(--heading-color);
   font-weight: 400;
-  font-family: 'TaipeiSans', sans-serif;
+  font-family: $font-bold;
 }
 
 %section {
