--- a/_sass/variables-hook.scss
+++ b/_sass/variables-hook.scss
@@ -6,7 +6,7 @@
 
 @font-face {
   font-family: 'TaipeiSans';
-  src: url("../../TaipeiSansTCBeta-Light.woff") format("woff"),
+  src: url("../../TaipeiSansTCBeta-Regular.woff") format("woff"),
     // url("../../TaipeiSansTCBeta-Light.ttf") format("truetype");
 }
 $font-main: 'TaipeiSans', sans-serif;
