--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -1044,7 +1044,7 @@ $sidebar-display: "sidebar-display";
   display: none;
   font-size: 1.1rem;
   font-weight: 600;
-  font-family: $font-bold;
+  font-family: $font-main;
   color: var(--topbar-text-color);
   text-align: center;
   width: 70%;
