--- a/_sass/addon/module.scss
+++ b/_sass/addon/module.scss
@@ -6,8 +6,8 @@
 
 %heading {
   color: var(--heading-color);
-  font-weight: 400;
-  font-family: $font-bold;
+  font-weight: 600;
+  font-family: $font-main;
 }
 
 %section {
