font-display: swap;

--- a/_sass/variables-hook.scss
+++ b/_sass/variables-hook.scss
@@ -10,6 +10,7 @@
   src: local("TaipeiSansTCBeta-Regular"),
   local("TaipeiSansTCBeta Regular"),
   url("../../TaipeiSansTCBeta-Regular.woff") format("woff");
+  font-display: swap;
 }
 
 // Open Sans
